login is kind of done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:1234/iss
+spring.datasource.username=postgres
+spring.datasource.password=1234
+server.error.include-binding-errors=always
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+timo.app.jwtCookieName= zurli
+timo.app.jwtSecret= zurliSecretKey
+timo.app.jwtExpirationMs= 6000000
