ia backendu iannis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:1234/iss
+spring.datasource.url=jdbc:postgresql://localhost:5432/iss
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=20021108
 server.error.include-binding-errors=always
 
 spring.jpa.hibernate.ddl-auto=update
