mama masii de files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/iss
+spring.datasource.url=jdbc:postgresql://localhost:1234/iss
 spring.datasource.username=postgres
-spring.datasource.password=20021108
+spring.datasource.password=1234
 server.error.include-binding-errors=always
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 timo.app.jwtCookieName= zurli
 timo.app.jwtSecret= zurliSecretKey
 timo.app.jwtExpirationMs= 6000000
+
+spring.servlet.multipart.enabled = true
